content/vagrant/v2.3.0/content/docs/providers/vmware/index.mdx
---
layout: docs
page_title: VMware Provider
description: |-
  HashiCorp develops an official VMware Fusion and VMware Workstation provider
  for Vagrant. This provider allows Vagrant to power VMware based machines and
  take advantage of the improved stability and performance that VMware software
  offers.
# START AUTO GENERATED METADATA, DO NOT EDIT
created_at: 2025-11-20T11:55:22-05:00
last_modified: 2025-11-20T11:55:22-05:00
# END AUTO GENERATED METADATA
---

# VMware

[HashiCorp](https://www.hashicorp.com) develops an official
[VMware Fusion](https://www.vmware.com/products/fusion/overview.html)
and [VMware Workstation](https://www.vmware.com/products/workstation/)&nbsp;
[provider](/docs/providers/) for Vagrant. This provider allows
Vagrant to power VMware based machines and take advantage of the
improved stability and performance that VMware software offers.

The Vagrant VMware plugin is now open sourced under the MPL. The code
repository for the Vagrant VMware plugin is available on [GitHub](https://github.com/hashicorp/vagrant-vmware-desktop).

This provider is a drop-in replacement for VirtualBox. However, there are some
VMware-specific things such as box formats, configurations, etc. that are
documented here.

Please note that VMware Fusion and VMware Workstation are third-party products
that must be purchased and installed separately prior to using the provider.

Use the navigation to the left to find a specific VMware topic to read
more about.
